--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
     "process": "^0.11.10",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
