--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.0.9",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18.0.3",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.16",
